--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "profile",
-  "homepage": "https://zakysteinfeld.github.io/profile",
+  "homepage": "https://zakysteinfeld.github.io/portofolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
