--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.19.1",
+    "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
+    "mdbreact": "^4.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
