--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-scroll-up-button": "^1.6.4",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
