--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mdbreact": "^4.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-scroll-up-button": "^1.6.4",
