--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-scroll-to": "^2.0.10",
     "react-scroll-up-button": "^1.6.4",
     "reactstrap": "^8.0.0"
   },
