--- a/src/common/json/project.json
+++ b/src/common/json/project.json
@@ -26,7 +26,7 @@
     {
         "name": "Pocketbank-Merchant",
         "year": "2019",
-        "image": "anabatic",
+        "image": "Anabatic",
         "client": "PT Anabatic Technologies Tbk",
         "desc": "",
         "tech": ""
