--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "mdbreact": "^4.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-image-zoom": "^0.7.0",
+    "react-medium-image-zoom": "^3.1.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
