--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "antd": "^3.19.1",
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
+    "jquery": "^3.4.1",
     "mdbreact": "^4.15.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-image-zoom": "^0.7.0",
@@ -17,6 +19,7 @@
     "react-scripts": "3.0.1",
     "react-scroll-to": "^2.0.10",
     "react-scroll-up-button": "^1.6.4",
+    "react-springy-parallax": "^1.3.0",
     "reactstrap": "^8.0.0"
   },
   "scripts": {
