--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mdbreact": "^4.15.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-click-outside": "github:tj/react-click-outside",
     "react-dom": "^16.8.6",
     "react-image-zoom": "^0.7.0",
     "react-medium-image-zoom": "^3.1.1",
@@ -20,7 +21,8 @@
     "react-scroll-to": "^2.0.10",
     "react-scroll-up-button": "^1.6.4",
     "react-springy-parallax": "^1.3.0",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "universal-cookie": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
