--- a/src/common/json/project.json
+++ b/src/common/json/project.json
@@ -6,17 +6,17 @@
         "client": "PT Bandung International Aviation",
         "desc": "Flightboard was purposely made to manage BIA's Flight Management for Cadets that are still on training.",
         "descjp": "Flightboardは、訓練中の士官候補生向けのBIAフライト管理を管理するために意図的に作成されました。",
-        "tech": "",
-        "appImg": ""
+        "tech": "Laravel, Bootstrap, My SQL",
+        "appImg": null
     },
     {
         "name": "Portal AHASS",
-        "year": "2018",
+        "year": "2017",
         "image": "ai",
         "client": "PT Astra International Tbk",
         "desc": "Portal AHASS is an ERP application that deserve user with some of chart reports on the dasboard page.",
         "descjp": "ポータルAHASSは、ダッシュボードページのチャートレポートの一部でユーザーにふさわしいERPアプリケーションです。",
-        "tech": "React JS, Chart JS, .NET 4.6, PetaPoco, SQL Server",
+        "tech": "React JS, Bootstrap, Reactstrap, Kendo-UI, Chart JS, .NET 4.6, PetaPoco, SQL Server",
         "appImg": "portalahass.png"
     },
     {
@@ -26,8 +26,8 @@
         "client": "Boga Group",
         "desc": "Boga Royalty Apps is a royalty application that give coupon promo code for customer on restaurant under Boga Group.",
         "descjp": "Boga Loyalty Appは、Boga Groupのレストランの顧客にクーポンプロモーションコードを提供するロイヤリティアプリケーションです。",
-        "tech": "",
-        "appImg": ""
+        "tech": ".NET Framework 4.6, SQL Server, My SQL, Firebase",
+        "appImg": null
     },
     {
         "name": "Pocketbank-Merchant",
@@ -36,7 +36,7 @@
         "client": "PT Anabatic Technologies Tbk",
         "desc": "PocketBank-Merchant is a merchant apps.",
         "descjp": "PocketBank-Merchantは商人のアプリです。",
-        "tech": "React JS, ati-firebase, ati-react-web, antd",
+        "tech": "React JS, ati-firebase, ati-react-web, Ant Design",
         "appImg": "pocketbank.png"
     },
     {
@@ -46,7 +46,7 @@
         "client": "IBM",
         "desc": "MITSTrade is a machine learning.",
         "descjp": "PocketBank-Merchantは商人のアプリです。",
-        "tech": "React JS, antd",
-        "appImg": "ibm.png"
+        "tech": "React JS, Ant Design",
+        "appImg": "trade-ai.png"
     }
 ]
